--- a/index.html
+++ b/index.html
@@ -1907,6 +1907,278 @@
 			  document.getElementById("bTtitle1").textContent = "Mustang Coin";
 			  tickerCode = "MST";
 			}
+			else if (document.getElementById("customCoinName").value == "nacho") {
+			  document.getElementById("coinjs_pub").value = "0x0";
+			  document.getElementById("coinjs_priv").value = "0x80";
+			  document.getElementById("coinjs_multisig").value = "0x1";
+			  document.getElementById("coinLogo").src = "images/logo/nacho.png";
+			  document.getElementById("bTtitle").textContent = "NachoCoin";
+			  document.getElementById("bTtitle1").textContent = "NachoCoin";
+			  tickerCode = "NACHO";
+			}
+			else if (document.getElementById("customCoinName").value == "n8v") {
+			  document.getElementById("coinjs_pub").value = "0x35";
+			  document.getElementById("coinjs_priv").value = "0x70";
+			  document.getElementById("coinjs_multisig").value = "0x7a";
+			  document.getElementById("coinLogo").src = "images/logo/n8v.png";
+			  document.getElementById("bTtitle").textContent = "NativeCoin";
+			  document.getElementById("bTtitle1").textContent = "NativeCoin";
+			  tickerCode = "N8V";
+			}
+			else if (document.getElementById("customCoinName").value == "nav") {
+				// Come Back
+			  document.getElementById("coinjs_pub").value = "0x";
+			  document.getElementById("coinjs_priv").value = "0x";
+			  document.getElementById("coinjs_multisig").value = "0x";
+			  document.getElementById("coinLogo").src = "images/logo/nav.png";
+			  document.getElementById("bTtitle").textContent = "Navcoin";
+			  document.getElementById("bTtitle1").textContent = "Navcoin";
+			  tickerCode = "NAV";
+			}
+			else if (document.getElementById("customCoinName").value == "netko") {
+			  document.getElementById("coinjs_pub").value = "0x35";
+			  document.getElementById("coinjs_priv").value = "0xb1";
+			  document.getElementById("coinjs_multisig").value = "0x5";
+			  document.getElementById("coinLogo").src = "images/logo/netko.png";
+			  document.getElementById("bTtitle").textContent = "NetkoCoin";
+			  document.getElementById("bTtitle1").textContent = "NetkoCoin";
+			  tickerCode = "NETKO";
+			}
+			else if (document.getElementById("customCoinName").value == "nro") {
+			  document.getElementById("coinjs_pub").value = "0x35";
+			  document.getElementById("coinjs_priv").value = "0xb5";
+			  document.getElementById("coinjs_multisig").value = "0x75";
+			  document.getElementById("coinLogo").src = "images/logo/nro.png";
+			  document.getElementById("bTtitle").textContent = "Neurocoin";
+			  document.getElementById("bTtitle1").textContent = "Neurocoin";
+			  tickerCode = "NRO";
+			}
+			else if (document.getElementById("customCoinName").value == "nix") {
+			  document.getElementById("coinjs_pub").value = "0x26";
+			  document.getElementById("coinjs_priv").value = "0x80";
+			  document.getElementById("coinjs_multisig").value = "0x35";
+			  document.getElementById("coinLogo").src = "images/logo/nix.png";
+			  document.getElementById("bTtitle").textContent = "NixCore";
+			  document.getElementById("bTtitle1").textContent = "NixCore";
+			  tickerCode = "NIX";
+			}
+			else if (document.getElementById("customCoinName").value == "nobl") {
+			  document.getElementById("coinjs_pub").value = "0x15";
+			  document.getElementById("coinjs_priv").value = "0x95";
+			  document.getElementById("coinjs_multisig").value = "0x5";
+			  document.getElementById("coinLogo").src = "images/logo/nobl.png";
+			  document.getElementById("bTtitle").textContent = "Noblecoin";
+			  document.getElementById("bTtitle1").textContent = "Noblecoin";
+			  tickerCode = "NOBL";
+			}
+			else if (document.getElementById("customCoinName").value == "nor") {
+			  document.getElementById("coinjs_pub").value = "0x50";
+			  document.getElementById("coinjs_priv").value = "0xd0";
+			  document.getElementById("coinjs_multisig").value = "0x7";
+			  document.getElementById("coinLogo").src = "images/logo/nor.png";
+			  document.getElementById("bTtitle").textContent = "Noir";
+			  document.getElementById("bTtitle1").textContent = "Noir";
+			  tickerCode = "NOR";
+			}
+			else if (document.getElementById("customCoinName").value == "nort") {
+			  document.getElementById("coinjs_pub").value = "0x35";
+			  document.getElementById("coinjs_priv").value = "0x38";
+			  document.getElementById("coinjs_multisig").value = "0x6";
+			  document.getElementById("coinLogo").src = "images/logo/nort.png";
+			  document.getElementById("bTtitle").textContent = "Northern";
+			  document.getElementById("bTtitle1").textContent = "Northern";
+			  tickerCode = "NORT";
+			}
+			else if (document.getElementById("customCoinName").value == "npc") {
+			  document.getElementById("coinjs_pub").value = "0x35";
+			  document.getElementById("coinjs_priv").value = "0xb5";
+			  document.getElementById("coinjs_multisig").value = "0x36";
+			  document.getElementById("coinLogo").src = "images/logo/npc.png";
+			  document.getElementById("bTtitle").textContent = "NPCcoin";
+			  document.getElementById("bTtitle1").textContent = "NPCcoin";
+			  tickerCode = "NPC";
+			}
+			else if (document.getElementById("customCoinName").value == "orb") {
+			  document.getElementById("coinjs_pub").value = "0x73";
+			  document.getElementById("coinjs_priv").value = "0xf3";
+			  document.getElementById("coinjs_multisig").value = "0x8";
+			  document.getElementById("coinLogo").src = "images/logo/orb.png";
+			  document.getElementById("bTtitle").textContent = "Orbitcoin";
+			  document.getElementById("bTtitle1").textContent = "Orbitcoin";
+			  tickerCode = "ORB";
+			}
+			else if (document.getElementById("customCoinName").value == "ozc") {
+			  document.getElementById("coinjs_pub").value = "0x73";
+			  document.getElementById("coinjs_priv").value = "0xf3";
+			  document.getElementById("coinjs_multisig").value = "0x5";
+			  document.getElementById("coinLogo").src = "images/logo/ozc.png";
+			  document.getElementById("bTtitle").textContent = "Ozziecoin";
+			  document.getElementById("bTtitle1").textContent = "Ozziecoin";
+			  tickerCode = "OZC";
+			}
+			else if (document.getElementById("customCoinName").value == "pak") {
+			  document.getElementById("coinjs_pub").value = "0x37";
+			  document.getElementById("coinjs_priv").value = "0xb0";
+			  document.getElementById("coinjs_multisig").value = "0x5";
+			  document.getElementById("coinLogo").src = "images/logo/pak.png";
+			  document.getElementById("bTtitle").textContent = "Pakcoin";
+			  document.getElementById("bTtitle1").textContent = "Pakcoin";
+			  tickerCode = "PAK";
+			}
+			else if (document.getElementById("customCoinName").value == "pcn") {
+			  document.getElementById("coinjs_pub").value = "0x37";
+			  document.getElementById("coinjs_priv").value = "0xb7";
+			  document.getElementById("coinjs_multisig").value = "0x55";
+			  document.getElementById("coinLogo").src = "images/logo/pcn.png";
+			  document.getElementById("bTtitle").textContent = "PeepCoin";
+			  document.getElementById("bTtitle1").textContent = "PeepCoin";
+			  tickerCode = "PCN";
+			}
+			else if (document.getElementById("customCoinName").value == "phr") {
+			  document.getElementById("coinjs_pub").value = "0x37";
+			  document.getElementById("coinjs_priv").value = "0xd4";
+			  document.getElementById("coinjs_multisig").value = "0xd";
+			  document.getElementById("coinLogo").src = "images/logo/phr.png";
+			  document.getElementById("bTtitle").textContent = "Phore";
+			  document.getElementById("bTtitle1").textContent = "Phore";
+			  tickerCode = "PHR";
+			}
+			else if (document.getElementById("customCoinName").value == "pho") {
+			  document.getElementById("coinjs_pub").value = "0x1a";
+			  document.getElementById("coinjs_priv").value = "0x9a";
+			  document.getElementById("coinjs_multisig").value = "0x7";
+			  document.getElementById("coinLogo").src = "images/logo/pho.png";
+			  document.getElementById("bTtitle").textContent = "Photon";
+			  document.getElementById("bTtitle1").textContent = "Photon";
+			  tickerCode = "PHO";
+			}
+			else if (document.getElementById("customCoinName").value == "pura") {
+			  document.getElementById("coinjs_pub").value = "0x37";
+			  document.getElementById("coinjs_priv").value = "0x96";
+			  document.getElementById("coinjs_multisig").value = "0x10";
+			  document.getElementById("coinLogo").src = "images/logo/pura.png";
+			  document.getElementById("bTtitle").textContent = "Pura";
+			  document.getElementById("bTtitle1").textContent = "Pura";
+			  tickerCode = "PURA";
+			}
+			else if (document.getElementById("customCoinName").value == "put") {
+			  document.getElementById("coinjs_pub").value = "0x37";
+			  document.getElementById("coinjs_priv").value = "0xb7";
+			  document.getElementById("coinjs_multisig").value = "0x14";
+			  document.getElementById("coinLogo").src = "images/logo/put.png";
+			  document.getElementById("bTtitle").textContent = "Putincoin";
+			  document.getElementById("bTtitle1").textContent = "Putincoin";
+			  tickerCode = "PUT";
+			}
+			else if (document.getElementById("customCoinName").value == "qac") {
+			  document.getElementById("coinjs_pub").value = "0x3a";
+			  document.getElementById("coinjs_priv").value = "0xcc";
+			  document.getElementById("coinjs_multisig").value = "0x78";
+			  document.getElementById("coinLogo").src = "images/logo/qac.png";
+			  document.getElementById("bTtitle").textContent = "Quasar";
+			  document.getElementById("bTtitle1").textContent = "Quasar";
+			  tickerCode = "QAC";
+			}
+			else if (document.getElementById("customCoinName").value == "qub") {
+			  document.getElementById("coinjs_pub").value = "0x3a";
+			  document.getElementById("coinjs_priv").value = "0x99";
+			  document.getElementById("coinjs_multisig").value = "0x55";
+			  document.getElementById("coinLogo").src = "images/logo/qub.png";
+			  document.getElementById("bTtitle").textContent = "QubeNet";
+			  document.getElementById("bTtitle1").textContent = "QubeNet";
+			  tickerCode = "QUB";
+			}
+			else if (document.getElementById("customCoinName").value == "rads") {
+			  document.getElementById("coinjs_pub").value = "0x4c";
+			  document.getElementById("coinjs_priv").value = "0x79";
+			  document.getElementById("coinjs_multisig").value = "0x3a";
+			  document.getElementById("coinLogo").src = "images/logo/rads.png";
+			  document.getElementById("bTtitle").textContent = "Radium";
+			  document.getElementById("bTtitle1").textContent = "Radium";
+			  tickerCode = "RADS";
+			}
+			else if (document.getElementById("customCoinName").value == "rpc") {
+			  document.getElementById("coinjs_pub").value = "0x3c";
+			  document.getElementById("coinjs_priv").value = "0xbc";
+			  document.getElementById("coinjs_multisig").value = "0x3";
+			  document.getElementById("coinLogo").src = "images/logo/rpc.png";
+			  document.getElementById("bTtitle").textContent = "RonPaulCoin";
+			  document.getElementById("bTtitle1").textContent = "RonPaulCoin";
+			  tickerCode = "RPC";
+			}
+			else if (document.getElementById("customCoinName").value == "scol") {
+			  document.getElementById("coinjs_pub").value = "0x3f";
+			  document.getElementById("coinjs_priv").value = "0xbf";
+			  document.getElementById("coinjs_multisig").value = "0x55";
+			  document.getElementById("coinLogo").src = "images/logo/scol.png";
+			  document.getElementById("bTtitle").textContent = "Scolcoin";
+			  document.getElementById("bTtitle1").textContent = "Scolcoin";
+			  tickerCode = "SCOL";
+			}
+			else if (document.getElementById("customCoinName").value == "scribe") {
+			  document.getElementById("coinjs_pub").value = "0x3c";
+			  document.getElementById("coinjs_priv").value = "0x6e";
+			  document.getElementById("coinjs_multisig").value = "0x7d";
+			  document.getElementById("coinLogo").src = "images/logo/scribe.png";
+			  document.getElementById("bTtitle").textContent = "scribe";
+			  document.getElementById("bTtitle1").textContent = "scribe";
+			  tickerCode = "SCRIBE";
+			}
+			else if (document.getElementById("customCoinName").value == "lyra") {
+			  document.getElementById("coinjs_pub").value = "0x30";
+			  document.getElementById("coinjs_priv").value = "0xae";
+			  document.getElementById("coinjs_multisig").value = "0xd";
+			  document.getElementById("coinLogo").src = "images/logo/lyra.png";
+			  document.getElementById("bTtitle").textContent = "Scrypta";
+			  document.getElementById("bTtitle1").textContent = "Scrypta";
+			  tickerCode = "LYRA";
+			}
+			else if (document.getElementById("customCoinName").value == "sxc") {
+			  document.getElementById("coinjs_pub").value = "0x3e";
+			  document.getElementById("coinjs_priv").value = "0xbe";
+			  document.getElementById("coinjs_multisig").value = "0x45";
+			  document.getElementById("coinLogo").src = "images/logo/sxc.png";
+			  document.getElementById("bTtitle").textContent = "Sexcoin";
+			  document.getElementById("bTtitle1").textContent = "Sexcoin";
+			  tickerCode = "SXC";
+			}
+			else if (document.getElementById("customCoinName").value == "sha") {
+			  document.getElementById("coinjs_pub").value = "0x3f";
+			  document.getElementById("coinjs_priv").value = "0xbf";
+			  document.getElementById("coinjs_multisig").value = "0x8";
+			  document.getElementById("coinLogo").src = "images/logo/sha.png";
+			  document.getElementById("bTtitle").textContent = "SHACoin";
+			  document.getElementById("bTtitle1").textContent = "SHACoin";
+			  tickerCode = "SHA";
+			}
+			else if (document.getElementById("customCoinName").value == "skc") {
+			  document.getElementById("coinjs_pub").value = "0x";
+			  document.getElementById("coinjs_priv").value = "0x";
+			  document.getElementById("coinjs_multisig").value = "0x";
+			  document.getElementById("coinLogo").src = "images/logo/skc.png";
+			  document.getElementById("bTtitle").textContent = "Skeincoin";
+			  document.getElementById("bTtitle1").textContent = "Skeincoin";
+			  tickerCode = "SKC";
+			}
+			else if (document.getElementById("customCoinName").value == "slx") {
+			  document.getElementById("coinjs_pub").value = "0x7d";
+			  document.getElementById("coinjs_priv").value = "0x8c";
+			  document.getElementById("coinjs_multisig").value = "0x12";
+			  document.getElementById("coinLogo").src = "images/logo/slx.png";
+			  document.getElementById("bTtitle").textContent = "Slate";
+			  document.getElementById("bTtitle1").textContent = "Slate";
+			  tickerCode = "SLX";
+			}
+			else if (document.getElementById("customCoinName").value == "slm") {
+			  document.getElementById("coinjs_pub").value = "0x3f";
+			  document.getElementById("coinjs_priv").value = "0xbf";
+			  document.getElementById("coinjs_multisig").value = "0x7d";
+			  document.getElementById("coinLogo").src = "images/logo/slm.png";
+			  document.getElementById("bTtitle").textContent = "Slimcoin";
+			  document.getElementById("bTtitle1").textContent = "Slimcoin";
+			  tickerCode = "SLM";
+			}
+
 
 		  else {
 				document.getElementById("xfeeTicker").textContent = document.getElementById("customCoinName").value
