--- a/index.html
+++ b/index.html
@@ -2799,20 +2799,11 @@
 			  document.getElementById("bTtitle1").textContent = "Rupaya";
 			  tickerCode = "RUPX";
 			}
-			else if (document.getElementById("customCoinName").value == "1mt") {
-			  document.getElementById("coinjs_pub").value = "0x";
-			  document.getElementById("coinjs_priv").value = "0x";
-			  document.getElementById("coinjs_multisig").value = "0x";
-			  document.getElementById("coinLogo").src = "images/logo/1mt.png";
-			  document.getElementById("bTtitle").textContent = "1Million Token";
-			  document.getElementById("bTtitle1").textContent = "1Million Token";
-			  tickerCode = "1MT";
-			}
 			else if (document.getElementById("customCoinName").value == "airx") {
 			  document.getElementById("coinjs_pub").value = "0x";
 			  document.getElementById("coinjs_priv").value = "0x";
 			  document.getElementById("coinjs_multisig").value = "0x";
-			  document.getElementById("coinLogo").src = "images/logo/airx.png";
+			  document.getElementById("coinLogo").src = "images/logo/airx.jpg";
 			  document.getElementById("bTtitle").textContent = "Aircoins";
 			  document.getElementById("bTtitle1").textContent = "Aircoins";
 			  tickerCode = "AIRX";
@@ -2821,7 +2812,7 @@
 			  document.getElementById("coinjs_pub").value = "0x7d";
 			  document.getElementById("coinjs_priv").value = "0x5f";
 			  document.getElementById("coinjs_multisig").value = "0x53";
-			  document.getElementById("coinLogo").src = "images/logo/asafe2.png";
+			  document.getElementById("coinLogo").src = "images/logo/asafe2.webp";
 			  document.getElementById("bTtitle").textContent = "Allsafe";
 			  document.getElementById("bTtitle1").textContent = "Allsafe";
 			  tickerCode = "ASAFE2";
@@ -2830,7 +2821,7 @@
 			  document.getElementById("coinjs_pub").value = "0x17";
 			  document.getElementById("coinjs_priv").value = "0x97";
 			  document.getElementById("coinjs_multisig").value = "0x29";
-			  document.getElementById("coinLogo").src = "images/logo/.png";
+			  document.getElementById("coinLogo").src = "images/logo/avn.png";
 			  document.getElementById("bTtitle").textContent = "Avantage";
 			  document.getElementById("bTtitle1").textContent = "Avantage";
 			  tickerCode = "AVN";
@@ -2839,10 +2830,154 @@
 			  document.getElementById("coinjs_pub").value = "0x19";
 			  document.getElementById("coinjs_priv").value = "0x99";
 			  document.getElementById("coinjs_multisig").value = "0x8";
-			  document.getElementById("coinLogo").src = "images/logo/.png";
+			  document.getElementById("coinLogo").src = "images/logo/bcf.png";
 			  document.getElementById("bTtitle").textContent = "Bitcoin Fast";
 			  document.getElementById("bTtitle1").textContent = "Bitcoin Fast";
 			  tickerCode = "BCF";
+			}
+			else if (document.getElementById("customCoinName").value == "bell") {
+			  document.getElementById("coinjs_pub").value = "0x19";
+			  document.getElementById("coinjs_priv").value = "0x80";
+			  document.getElementById("coinjs_multisig").value = "0x55";
+			  document.getElementById("coinLogo").src = "images/logo/bell.png";
+			  document.getElementById("bTtitle").textContent = "Bellcoin";
+			  document.getElementById("bTtitle1").textContent = "Bellcoin";
+			  tickerCode = "BELL";
+			}
+			else if (document.getElementById("customCoinName").value == "bynd") {
+			  document.getElementById("coinjs_pub").value = "0x19";
+			  document.getElementById("coinjs_priv").value = "0x19";
+			  document.getElementById("coinjs_multisig").value = "0x5";
+			  document.getElementById("coinLogo").src = "images/logo/bynd.png";
+			  document.getElementById("bTtitle").textContent = "Beyondcoin";
+			  document.getElementById("bTtitle1").textContent = "Beyondcoin";
+			  tickerCode = "BYND";
+			}
+			else if (document.getElementById("customCoinName").value == "bnb") {
+			  document.getElementById("coinjs_pub").value = "0x";
+			  document.getElementById("coinjs_priv").value = "0x";
+			  document.getElementById("coinjs_multisig").value = "0x";
+			  document.getElementById("coinLogo").src = "images/logo/bnb.png";
+			  document.getElementById("bTtitle").textContent = "Binance Coin";
+			  document.getElementById("bTtitle1").textContent = "Binance Coin";
+			  tickerCode = "BNB";
+			}
+			else if (document.getElementById("customCoinName").value == "bis") {
+			  document.getElementById("coinjs_pub").value = "0x";
+			  document.getElementById("coinjs_priv").value = "0x";
+			  document.getElementById("coinjs_multisig").value = "0x";
+			  document.getElementById("coinLogo").src = "images/logo/bis.png";
+			  document.getElementById("bTtitle").textContent = "Bismuth";
+			  document.getElementById("bTtitle1").textContent = "Bismuth";
+			  tickerCode = "BIS";
+			}
+			else if (document.getElementById("customCoinName").value == "btg") {
+			  document.getElementById("coinjs_pub").value = "0x26";
+			  document.getElementById("coinjs_priv").value = "0x80";
+			  document.getElementById("coinjs_multisig").value = "0x17";
+			  document.getElementById("coinLogo").src = "images/logo/.png";
+			  document.getElementById("bTtitle").textContent = "Bitcoin Gold";
+			  document.getElementById("bTtitle1").textContent = "Bitcoin Gold";
+			  tickerCode = "BTG";
+			}
+			else if (document.getElementById("customCoinName").value == "btcs") {
+			  document.getElementById("coinjs_pub").value = "0x0";
+			  document.getElementById("coinjs_priv").value = "0x80";
+			  document.getElementById("coinjs_multisig").value = "0x5";
+			  document.getElementById("coinLogo").src = "images/logo/btcs.png";
+			  document.getElementById("bTtitle").textContent = "Bitcoin Scrypt";
+			  document.getElementById("bTtitle1").textContent = "Bitcoin Scrypt";
+			  tickerCode = "btcs";
+			}
+			else if (document.getElementById("customCoinName").value == "bfl") {
+			  document.getElementById("coinjs_pub").value = "0x0";
+			  document.getElementById("coinjs_priv").value = "0x80";
+			  document.getElementById("coinjs_multisig").value = "0x5";
+			  document.getElementById("coinLogo").src = "images/logo/bfl.png";
+			  document.getElementById("bTtitle").textContent = "Bitflate";
+			  document.getElementById("bTtitle1").textContent = "Bitflate";
+			  tickerCode = "BFL";
+			}
+			else if (document.getElementById("customCoinName").value == "bdc") {
+			  document.getElementById("coinjs_pub").value = "0x";
+			  document.getElementById("coinjs_priv").value = "0x";
+			  document.getElementById("coinjs_multisig").value = "0x";
+			  document.getElementById("coinLogo").src = "images/logo/bdc.png";
+			  document.getElementById("bTtitle").textContent = "BollywoodCoin";
+			  document.getElementById("bTtitle1").textContent = "BollywoodCoin";
+			  tickerCode = "BDC";
+			}
+			else if (document.getElementById("customCoinName").value == "brix") {
+			  document.getElementById("coinjs_pub").value = "0x1a";
+			  document.getElementById("coinjs_priv").value = "0xcc";
+			  document.getElementById("coinjs_multisig").value = "0x10";
+			  document.getElementById("coinLogo").src = "images/logo/brix.png";
+			  document.getElementById("bTtitle").textContent = "BrixCoin";
+			  document.getElementById("bTtitle1").textContent = "BrixCoin";
+			  tickerCode = "BRIX";
+			}
+			else if (document.getElementById("customCoinName").value == "byt") {
+			  document.getElementById("coinjs_pub").value = "0x";
+			  document.getElementById("coinjs_priv").value = "0x";
+			  document.getElementById("coinjs_multisig").value = "0x";
+			  document.getElementById("coinLogo").src = "images/logo/byt.png";
+			  document.getElementById("bTtitle").textContent = "Bytecoin";
+			  document.getElementById("bTtitle1").textContent = "Bytecoin";
+			  tickerCode = "BYT";
+			}
+			else if (document.getElementById("customCoinName").value == "") {
+			  document.getElementById("coinjs_pub").value = "0x";
+			  document.getElementById("coinjs_priv").value = "0x";
+			  document.getElementById("coinjs_multisig").value = "0x";
+			  document.getElementById("coinLogo").src = "images/logo/.png";
+			  document.getElementById("bTtitle").textContent = "";
+			  document.getElementById("bTtitle1").textContent = "";
+			  tickerCode = "";
+			}
+			else if (document.getElementById("customCoinName").value == "") {
+			  document.getElementById("coinjs_pub").value = "0x";
+			  document.getElementById("coinjs_priv").value = "0x";
+			  document.getElementById("coinjs_multisig").value = "0x";
+			  document.getElementById("coinLogo").src = "images/logo/.png";
+			  document.getElementById("bTtitle").textContent = "";
+			  document.getElementById("bTtitle1").textContent = "";
+			  tickerCode = "";
+			}
+			else if (document.getElementById("customCoinName").value == "") {
+			  document.getElementById("coinjs_pub").value = "0x";
+			  document.getElementById("coinjs_priv").value = "0x";
+			  document.getElementById("coinjs_multisig").value = "0x";
+			  document.getElementById("coinLogo").src = "images/logo/.png";
+			  document.getElementById("bTtitle").textContent = "";
+			  document.getElementById("bTtitle1").textContent = "";
+			  tickerCode = "";
+			}
+			else if (document.getElementById("customCoinName").value == "") {
+			  document.getElementById("coinjs_pub").value = "0x";
+			  document.getElementById("coinjs_priv").value = "0x";
+			  document.getElementById("coinjs_multisig").value = "0x";
+			  document.getElementById("coinLogo").src = "images/logo/.png";
+			  document.getElementById("bTtitle").textContent = "";
+			  document.getElementById("bTtitle1").textContent = "";
+			  tickerCode = "";
+			}
+			else if (document.getElementById("customCoinName").value == "") {
+			  document.getElementById("coinjs_pub").value = "0x";
+			  document.getElementById("coinjs_priv").value = "0x";
+			  document.getElementById("coinjs_multisig").value = "0x";
+			  document.getElementById("coinLogo").src = "images/logo/.png";
+			  document.getElementById("bTtitle").textContent = "";
+			  document.getElementById("bTtitle1").textContent = "";
+			  tickerCode = "";
+			}
+			else if (document.getElementById("customCoinName").value == "") {
+			  document.getElementById("coinjs_pub").value = "0x";
+			  document.getElementById("coinjs_priv").value = "0x";
+			  document.getElementById("coinjs_multisig").value = "0x";
+			  document.getElementById("coinLogo").src = "images/logo/.png";
+			  document.getElementById("bTtitle").textContent = "";
+			  document.getElementById("bTtitle1").textContent = "";
+			  tickerCode = "";
 			}
 	  else {
 				document.getElementById("xfeeTicker").textContent = document.getElementById("customCoinName").value
@@ -4293,8 +4428,9 @@ jQuery(document).ready(function($) {
 <option value="luna">LunaCoin (LUNA)</option><option value="odn">Obsidian (ODN)</option><option value="esp">Espers 2.0 (ESP)</option><option value="moin">MoinCoin (MOIN)</option><option value="hyp">HyperStake (HYP)</option><option value="grc">Gridcoin (GRC)</option><option value="rupx">Rupaya (RUPX)</option>
 <option value="xhi">HiCoin (XHI)</option><option value="nka">IncaKoin (NKA)</option><option value="net">Netcoin (NET)</option><option value="jmc">Junson Ming Chan Coin (JMC)</option><option value="pac">Paccoin (PAC)</option><option value="hpc">HappyCoin (HPC)</option><option value="bost">Boostcoin (BOST)</option>
 <option value="rbt">Rimbit (RBT)</option><option value="fair">Faircoin (FAIR)</option><option value="dem">eMark (DEM)</option><option value="boat">Boat (BOAT)</option><option value="alex">Alexandrite (ALEX)</option><option value="nlc2">NoLimitCoin (NLC2)</option><option value="flt">Fluttercoin (FLT)</option>
-<option value="1mt">1Million Token (1MT)</option><option value="airx">Aircoins (AIRX)</option><option value="asafe2">Allsafe (ASAFE2)</option><option value="avn">Avantage (AVN)</option><option value="bcf">Bitcoin Fast (BCF)</option><option value="bdc">BollywoodCoin (BDC)</option><option value="bell">Bellcoin (BELL)</option>
-<option value="bfl">Bitflate (BFL)</option><option value="bis">Bismuth (BIS)</option><option value="bnb">Binance Coin (BNB)</option><option value="brix">BrixCoin (BRIX)</option><option value="btb">BitBall (BTB)</option>
+<option value="airx">Aircoins (AIRX)</option><option value="asafe2">Allsafe (ASAFE2)</option><option value="avn">Avantage (AVN)</option><option value="bcf">Bitcoin Fast (BCF)</option><option value="bdc">BollywoodCoin (BDC)</option><option value="bell">Bellcoin (BELL)</option>
+<option value="bfl">Bitflate (BFL)</option><option value="bis">Bismuth (BIS)</option><option value="bnb">Binance Coin (BNB)</option><option value="brix">BrixCoin (BRIX)</option><option value="btcs">Bitcoin Scrypt (BTCS)</option><option value="btg">Bitcoin Gold (BTG)</option>
+<option value="bynd">Beyondcoin (BYND)</option><option value="byt">Bytecoin (BCN)</option><option value="cdzc">CryptoDezireCash (CDZC)</option><option value="cheese">Cheesecoin (CHEESE)</option><option value="cir">Ciredo (CIR)</option><option value="cj">Cryptojacks (CJ)</option><option value="crave">Crave (CRAVE)</option>
 									</select>
 								</div>
 
